--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ body {
     margin:0;
     background:url("https://i.giphy.com/media/peAFQfg7Ol6IE/giphy.webp") no-repeat center center fixed;
     background-size:cover;
+    transform:scale(0.7);
 }
 #rn{
     position:fixed;
