--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@ body {
     margin:0;
     background:url("https://i.giphy.com/media/peAFQfg7Ol6IE/giphy.webp") no-repeat center center fixed;
     background-size:cover;
-    transform:scale(0.9);
 }
 #rn{
     position:fixed;
@@ -109,7 +108,7 @@ body {
     border-radius:50%;
     border-style:solid;
     border-width:1px;
-    transform:rotate(0deg);
+    transform:rotate(0deg) scale(0.9);
     background-image:url("https://www.funimada.com/assets/images/cards/big/bday-416.gif");
     background-size:cover;
 }
