--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@ body {
 }
 .rotate_content{
     position:fixed;
-    height:50vh;
-    width:50vh;
+    height:60vh;
+    width:60vh;
     background-color:red;
     border-radius:0%;
-    top:calc(50vh - 25vh);
-    left:calc(50vw - 25vh);
+    top:calc(50vh - 30vh);
+    left:calc(50vw - 30vh);
     border-radius:50%;
     border-style:solid;
     border-width:1px;
-    transform:rotate(0deg) scale(0.9);
+    transform:rotate(0deg);
     background-image:url("https://www.funimada.com/assets/images/cards/big/bday-416.gif");
     background-size:cover;
 }
@@ -122,23 +122,23 @@ body {
     border-radius:50% 50% 0 0;
 }
 #arr_1{
-    top:calc(0% - 35px);
+    top:calc(0% - 10px);
     left:calc(50% - 15px);
     transform:rotate(0deg);
 }
 #arr_2{
     top:calc(50% - 10px);
-    left:calc(100% + 10px);
+    left:calc(100% - 15px);
     transform:rotate(90deg);
 }
 #arr_3{
-    top:calc(100% + 15px);
+    top:calc(100% - 10px);
     left:calc(50% - 15px);
     transform:rotate(180deg);
 }
 #arr_4{
     top:calc(50% - 10px);
-    left:calc(0% - 40px);
+    left:calc(0% - 15px);
     transform:rotate(270deg);
 }
 
