--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ body {
     border-radius:50%;
 }
 #profile_image2{
-    background-image:url("https://api.sololearn.com/Uploads/Avatars/7920723.jpg");
+    background-image:url("https://www.dropbox.com/s/myqwwi9o70vk4d2/ic_launcher.png?dl=1");
     height:50px;
     width:50px;
     margin:0 auto 0 auto;
