--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
             <div id="sub_sub">
                 <div id="profile_image2"></div>
-                <div id="text_first">To AJ sir</div>
+                <div id="text_first">To Khushi singh</div>
             </div>
         </div>
         
